# group2

./: .gitignore  CMakeLists.txt  Makefile  Notes  README  README.md  tc-macwin.cmake  tc-winwin.cmake
_common/include/: AnimationClip.h  AttackState.hpp  Collider.hpp  ColorCodes.hpp  ConcurrentQueue.hpp  Cooldown.hpp  CooldownComponent.hpp  DisplayStatusEffect.hpp  Enemy.hpp  EnemyAttack.hpp  EnemyAttackState.hpp  EnemyComponent.hpp  Entity.hpp  Event.hpp  EventArgs.hpp  GameObject.hpp  GameState.hpp  HealEffect.hpp  HealPlayer.hpp  Health.hpp  IComponent.hpp  INetworkComponent.hpp  IStatusEffect.hpp  Invincible.hpp  MovementStateMachine.hpp  Mover.hpp  NetTransform.hpp  NetworkObject.hpp  NetworkObjectState.hpp  Packet.hpp  Player.hpp  PlayerSkill.hpp  PlayerSkillType.hpp  SpeedBoost.hpp  States.hpp  Status.hpp  Transform.hpp
_common/include/engine/: Scene.hpp
_common/src/: Collider.cpp  Cooldown.cpp  CooldownComponent.cpp  Entity.cpp  GameObject.cpp  IComponent.cpp  INetworkComponent.cpp  IStatusEffect.cpp  Invincible.cpp  MovementStateMachine.cpp  Mover.cpp  NetTransform.cpp  NetworkObject.cpp  Packet.cpp  Player.cpp  States.cpp  Status.cpp  Transform.cpp
assets/Bear2/: bear-3.gltf  bear.gltf
assets/BossBear/: bear-1.gltf
assets/Counter/: counter-042524-01.gltf
assets/animation/: model.gltf  scene.gltf
assets/arena/: arena.gltf
assets/arena2/: arena.gltf
assets/bear/: bear.gltf
assets/bear_v5/: bear.gltf
assets/donut-042524-02/: donut-042524-02.gltf  donut.gltf
assets/floor/: floor.gltf
assets/floor2/: arena.gltf
assets/ground/: plane.gltf
assets/heal-ring/: heal-ring.gltf
assets/laser-attack/: laser-beam-model.gltf
assets/male_basic_walk_30_frames_loop/: license.txt  scene.gltf
assets/medieval_civilian_3/: license.txt  scene.gltf
assets/player-note-attack/: player-note-attack.gltf
assets/projectile-attack/: projectile-attack-bone.gltf
assets/revive-ring/: revive-ring.gltf
assets/robot/: robot.gltf  untitled.gltf
assets/small_robot/: robot.gltf
assets/speedup-ring/: speedup-ring.gltf
assets/sphere/: sphere.gltf
assets/swipe-attack/: swipe-attack.gltf
assets/swipe-attack-v2/: swipe-attack.gltf
assets/testModel/: testModel2.gltf
assets/testing/: arena.gltf
assets/wave-attack-v3/: WaveAttack.gltf
client/: CMakeLists.txt  Client  Makefile  main.cpp
client/include/: AnimationClip.h  AnimationPlayer.h  AssetManager.hpp  AudioManager.hpp  Bone.h  Camera.h  Client.h  Component.hpp  Cube.h  Endgame.h  Entity.h  EntityBase.hpp  GameManager.hpp  GameObject.hpp  HUD.h  HealthBar.h  Helper.h  InputManager.h  Mesh.h  MessageBroker.hpp  Metronome.h  Model.h  Mover.h  Particle.h  Particle.hpp  ParticleSystem.h  ParticleSystem.hpp  Player.h  PlayerEffects.hpp  PlayerManager.hpp  Quad.h  Rectangle.h  Sector.h  Shader.h  SkyBox.hpp  TeamInfo.h  TestEntity.hpp  Topic.hpp  Transform.hpp  Window.h  (+4 more)
client/include/components/: BeatSyncComponent.hpp  Model.h  PlayerComponent.hpp  RendererComponent.hpp
client/prefabs/: Enemy.cpp  Enemy.hpp  EnemyAttack.cpp  PlayerSkill.cpp
client/shaders/: HUD.frag  HUD.vert  model.frag  model.vert  particle.frag  particle.vert  shader.frag  shader.vert  skybox.vert  test.frag  test.vert
client/src/: AnimationClip.cpp  AnimationPlayer.cpp  AssetManager.cpp  AudioManager.cpp  Bone.cpp  Camera.cpp  Client.cpp  Component.cpp  Cube.cpp  Endgame.cpp  Entity.cpp  GameManager.cpp  GameObject.cpp  HUD.cpp  Health.cpp  HealthBar.cpp  InputManager.cpp  Mesh.cpp  MessageBroker.cpp  Metronome.cpp  Model.cpp  MovementStateMachine.cpp  Mover.cpp  Particle.cpp  ParticleSystem.cpp  Player.cpp  PlayerEffects.cpp  Quad.cpp  Rectangle.cpp  Sector.cpp  Shader.cpp  SkyBox.cpp  Status.cpp  TeamInfo.cpp  TestEntity.cpp  Transform.cpp  Window.cpp  client.cpp  scene.gltf
client/src/components/: BeatSyncComponent.cpp  EnemyAttackState.cpp  EnemyComponent.cpp  Model.cpp  PlayerComponent.cpp  PlayerSkillType.cpp  RendererComponent.cpp
common/: Event.hpp  GameObject.hpp  IComponent.hpp  NetworkObject.cpp  NetworkObject.hpp  NetworkObjectState.hpp  Packet.cpp  Packet.hpp  psocket.hpp
common/include/: Component.hpp  GameObject.hpp  MessageBroker.hpp  Packet.hpp  Transform.hpp
common/packet/: Packet  main.cpp
common/src/: Component.cpp  GameObject.cpp  IComponent.cpp  MessageBroker.cpp  Packet.cpp  Transform.cpp
include/: Client.h  Window.h  psocket.hpp
packet/: Makefile  Packet  main.cpp
packet/include/: packet.hpp
packet/src/: packet.cpp
server/: CMakeLists.txt  CopyOfCMakeCache.txt  Makefile  main.cpp  server.app  tc-macwin.cmake  tc-osx.cmake  tc-winwin.cmake
server/components/: EnemyAttackState.cpp  EnemyComponent.cpp  PlayerCombat.cpp  PlayerCombat.hpp  PlayerSkillType.cpp
server/include/: Client.hpp  CollisionManager.hpp  Entity.hpp  EventArgs.hpp  Mover.hpp  NetworkManager.hpp  Player.hpp  Scene.hpp  Server.hpp  client.hpp  entity.hpp  game_manager.hpp  network_manager.hpp  observer.hpp  player.hpp  server.hpp
server/prefabs/: AttackManager.cpp  AttackManager.hpp  Enemy.cpp  Enemy.hpp  EnemyAttack.cpp  EnemyAttack.hpp  EnemyMover.cpp  EnemyMover.hpp  Heal.hpp  Health.hpp  LaserAttack.hpp  MarkedAttack.hpp  PlayerAttack.cpp  PlayerAttack.hpp  Revive.hpp  SkillTraits.hpp  SpeedUp.hpp  StompAttack.hpp  SwipeAttack.hpp
server/prefabs/enemyAttacks/: EnemyAttack.cpp  LaserAttack.cpp  MarkedAttack.cpp  StompAttack.cpp  SwipeAttack.cpp
server/prefabs/enemySkills/: EnemyAttack.cpp  LaserAttack.cpp  LaserAttack.hpp  MarkedAttack.cpp  MarkedAttack.hpp  SkillTraits.hpp  StompAttack.cpp  StompAttack.hpp  SwipeAttack.cpp  SwipeAttack.hpp
server/prefabs/playerSkills/: Heal.cpp  PlayerAttack.cpp  PlayerSkill.cpp  Revive.cpp  SpeedUp.cpp
server/src/: Client.cpp  CollisionManager.cpp  Entity.cpp  Health.cpp  MovementStateMachine.cpp  Mover.cpp  NetworkManager.cpp  Packet.cpp  Player.cpp  Scene.cpp  Server.cpp  Status.cpp  client.cpp  game_manager.cpp  network_manager.cpp  player.cpp  server.cpp
src/: Client.cpp  Cube.cpp  Mover.cpp  Window.cpp
tests/packet/: Makefile  Packet  main.cpp
(+11 files in other folders)
